Replace custom css with Tachyons
Remove custom utilities and styling in favor of Tachyons library.
Update all html files to use new class names.

--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -1,9 +1,3 @@
-<div class="ignite-cta text-center">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-xs-12">
-        <a href="{{ site.base_url }}projects/" class="ignite-btn">View All Projects</a>
-      </div>
-    </div>
-  </div>
-</div>
+<article>
+  <a href="{{ site.base_url }}projects/" class="no-underline f4 f3-ns tc db w-100 ph3 pv4 pv5-ns white bg-near-black bg-animate hover-bg-black">View All Projects</a>
+</article>
