--- a/_includes/features.html
+++ b/_includes/features.html
@@ -1,28 +1,28 @@
-<section class="features text-center section-padding" id="features">
+<section class="tc pv5">
   <div class="container-fluid">
     <div class="row features-wrapper">
-      <div class="col-md-4 feature">
-        <div class="feature__icon">
+      <div class="col-md-4 mb4 mb0-l">
+        <div class="feature-icon bg-blue white">
           <i class="icon-code"></i>
         </div>
         <h2 class="heading-underline">Responsive Web Development</h2>
-        <p>Using a strong understanding of HTML, CSS, browser compatibility, and accessibility, I develop websites using a mobile first strategy to ensure they look beautiful and perform flawlessly for everyone on all devices.</p>
+        <p class="lh-copy">Using a strong understanding of HTML, CSS, browser compatibility, and accessibility, I develop websites using a mobile first strategy to ensure they look beautiful and perform flawlessly for everyone on all devices.</p>
       </div>
 
-      <div class="col-md-4 feature">
-        <div class="feature__icon">
+      <div class="col-md-4 mb4 mb0-l">
+        <div class="feature-icon bg-blue white">
           <i class="icon-laptop"></i>
         </div>
         <h2 class="heading-underline">Performance Optimization</h2>
-        <p>Analyzing network utilization and page performance allows me to pinpoint bottlenecks in page load, performance, and jankiness. The findings of an analysis can be used as a roadmap to reduce bounce rates and drop-offs, improve user experience, and increase conversion rates.</p>
+        <p class="lh-copy">Analyzing network utilization and page performance allows me to pinpoint bottlenecks in page load, performance, and jankiness. The findings of an analysis can be used as a roadmap to reduce bounce rates and drop-offs, improve user experience, and increase conversion rates.</p>
       </div>
 
-      <div class="col-md-4 feature">
-        <div class="feature__icon">
+      <div class="col-md-4 mb4 mb0-l">
+        <div class="feature-icon bg-blue white">
           <i class="icon-heart"></i>
         </div>
         <h2 class="heading-underline">Speaking</h2>
-        <p>Attending and speaking at developer groups and conferences allows us all to share our knowledge and master our craft. Given my passion for CSS, I attempt to use every opportunity to share my love for the language.</p>
+        <p class="lh-copy">Attending and speaking at developer groups and conferences allows us all to share our knowledge and master our craft. Given my passion for CSS, I attempt to use every opportunity to share my love for the language.</p>
       </div>
     </div>
   </div>
