--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="site-footer" role="contentinfo">
+<footer class="bg-near-black white pt4 pb5" role="contentinfo">
   <div class="container-fluid">
     <div class="row center-xs">
       <div class="col-xs-12">
@@ -6,7 +6,7 @@
       </div>
 
       <div class="col-xs-12">
-        <p class="site-footer__credit">&copy; {{ site.time | date: '%Y' }} {{ site.author }}. All rights reserved.</p>
+        <p class="mb0 tc">&copy; {{ site.time | date: '%Y' }} {{ site.author }}. All rights reserved.</p>
       </div>
     </div>
   </div>
