--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,9 +1,9 @@
-<section class="hero" id="hero">
+<section class="bg-blue white pv6">
   <div class="container-fluid">
     <div class="row center-xs middle-xs">
       <hgroup class="col-xs-12 col-md-8">
-        <h1>NATHAN JESSEN</h1>
-        <h2 class="h3">Front-end Architect</h2>
+        <h1 class="tracked f1 fw6">NATHAN JESSEN</h1>
+        <h2 class="tracked f2 fw4">Front-end Architect</h2>
       </hgroup>
     </div>
   </div>
