--- a/_includes/nav-social.html
+++ b/_includes/nav-social.html
@@ -1,26 +1,26 @@
 <nav class="social-buttons">
-  {% if site.githubs %}<a href="{{ site.githubs }}" target="_blank" class="social-btn">
+  {% if site.githubs %}<a href="{{ site.githubs }}" target="_blank" class="bg-dark-gray hover-bg-blue white social-btn">
     <i class="icon-github-circled"></i><span class="sr-only">GitHub</span>
   </a>{% endif %}
-  {% if site.twitter %}<a href="{{ site.twitter }}" target="_blank" class="social-btn">
+  {% if site.twitter %}<a href="{{ site.twitter }}" target="_blank" class="bg-dark-gray hover-bg-blue white social-btn">
     <i class="icon-twitter"></i><span class="sr-only">Twitter</span>
   </a>{% endif %}
-  {% if site.medium %}<a href="{{ site.medium }}" target="_blank" class="social-btn">
+  {% if site.medium %}<a href="{{ site.medium }}" target="_blank" class="bg-dark-gray hover-bg-blue white social-btn">
     <i class="icon-medium"></i><span class="sr-only">Medium</span>
   </a>{% endif %}
-  {% if site.linkedin %}<a href="{{ site.linkedin }}" target="_blank" class="social-btn">
+  {% if site.linkedin %}<a href="{{ site.linkedin }}" target="_blank" class="bg-dark-gray hover-bg-blue white social-btn">
     <i class="icon-linkedin"></i><span class="sr-only">LinkedIn</span>
   </a>{% endif %}
-  {% if site.gplus %}<a href="{{ site.gplus }}" target="_blank" class="social-btn">
+  {% if site.gplus %}<a href="{{ site.gplus }}" target="_blank" class="bg-dark-gray hover-bg-blue white social-btn">
     <i class="icon-gplus"></i><span class="sr-only">Google Plus</span>
   </a>{% endif %}
-  {% if site.instagram %}<a href="{{ site.instagram }}" target="_blank" class="social-btn">
+  {% if site.instagram %}<a href="{{ site.instagram }}" target="_blank" class="bg-dark-gray hover-bg-blue white social-btn">
     <i class="icon-instagram"></i><span class="sr-only">Instagram</span>
   </a>{% endif %}
-  {% if site.dribbble %}<a href="{{ site.dribbble }}" target="_blank" class="social-btn">
+  {% if site.dribbble %}<a href="{{ site.dribbble }}" target="_blank" class="bg-dark-gray hover-bg-blue white social-btn">
     <i class="icon-dribbble"></i><span class="sr-only">Dribbble</span>
   </a>{% endif %}
-  {% if site.angellist %}<a href="{{ site.angellist }}" target="_blank" class="social-btn">
+  {% if site.angellist %}<a href="{{ site.angellist }}" target="_blank" class="bg-dark-gray hover-bg-blue white social-btn">
     <i class="icon-angellist"></i><span class="sr-only">AngelList</span>
   </a>{% endif %}
 </nav>
