--- a/_assets/css/main.css
+++ b/_assets/css/main.css
@@ -1,36 +1,16 @@
 @charset "UTF-8";
 
-/** Vendor Libraries */
-@import "vendor/normalize.css";
-@import "vendor/flexboxgrid.css";
-@import "vendor/fontello.css";
-@import "vendor/highlights.css";
-@import "vendor/syntax.css";
+/** Tachyons */
+@import "tachyons";
 
-/*! CSS Framework */
-@import "framework/root.css";
-@import "framework/base.css";
-@import "framework/links.css";
-@import "framework/backgrounds.css";
-@import "framework/buttons.css";
-@import "framework/headings.css";
-@import "framework/lists.css";
-@import "framework/media.css";
-@import "framework/card.css";
-@import "framework/margin.css";
-@import "framework/padding.css";
-@import "framework/utilities.css";
+/*! Flexboxgrid */
+@import "flexboxgrid";
 
 /*! Main CSS */
+/** Vendor Libraries */
+@import "partials/fontello.css";
+@import "partials/highlights.css";
+@import "partials/syntax.css";
+
 /** Components */
-@import "partials/badge.css";
-@import "partials/cta.css";
-@import "partials/features.css";
-@import "partials/footer.css";
-@import "partials/header.css";
-@import "partials/hero.css";
-@import "partials/misc.css";
-@import "partials/posts.css";
-@import "partials/projects.css";
-@import "partials/social.css";
-@import "partials/theme.css";
+@import "partials/custom.css";
