--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,18 +3,12 @@
   <head>
     {% include head.html %}
   </head>
-  <body id="top" class="{{ page.slug }}">
-    <!--[if lt IE 11]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/?locale=en/">upgrade your browser</a>. Your overall experience won't be effected on this site but upgrading your browser is always a great idea!</p>
-    <![endif]-->
-
+  <body class="{{ page.slug }} sans-serif bg-near-white">
     {% include header.html %}
     {{ content }}
     {% include footer.html %}
 
-    {% comment %}
-    JS and analytics only
-    {% endcomment %}
+    {% comment %} JS and analytics only {% endcomment %}
     <script src="{{ site.base_url }}assets/js/main.min.js"></script>
   </body>
 </html>
