Comment out empty js file

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,8 @@
     {% include footer.html %}
 
     {% comment %} JS and analytics only {% endcomment %}
+    {% comment %}
     <script src="{{ site.base_url }}assets/js/main.min.js"></script>
+    {% endcomment %}
   </body>
 </html>
