Add default anchor styles to article links

--- a/_assets/css/partials/custom.css
+++ b/_assets/css/partials/custom.css
@@ -1,5 +1,24 @@
 /** Misc */
 
+.article a {
+  color: #357edd;
+  text-decoration: none;
+
+  &,
+  &:active,
+  &:focus,
+  &:hover,
+  &:link,
+  &:visited {
+    transition: color .15s ease-in;
+  }
+
+  &:focus,
+  &:hover {
+    color: #00449e;
+  }
+}
+
 .heading-underline {
   font-size: 1rem;
   font-weight: 600;
