--- a/_assets/css/main.css
+++ b/_assets/css/main.css
@@ -1,5 +1,8 @@
 @charset "UTF-8";
 
+/*! Webfont */
+@import url('https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,500,500i,600,600i,700,700i');
+
 /** Tachyons */
 @import "tachyons";
 
