--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -1,15 +1,21 @@
 <section class="pv5 bg-light-gray">
   <div class="container-fluid">
-    <h2 class="mb4 mt0 f4">Articles</h2>
+    <h2 class="mb4 mt0 f3">Posts</h2>
 
-    <ul class="list pl0">
+    <ul class="list pl0 mv0">
       {% for post in site.posts %}
-      <li itemscope itemtype="http://schema.org/BlogPosting" class="mb3">
-        <time datetime="{{ post.date | date_to_xmlschema }}" itemprop="datePublished" class="f6">{{ post.date | date_to_string }}</time>
+
+      {% if forloop.last == true %}
+      <li itemscope itemtype="http://schema.org/BlogPosting">
+      {% else %}
+      <li itemscope itemtype="http://schema.org/BlogPosting" class="mb4">
+      {% endif %}
+        <time datetime="{{ post.date | date_to_xmlschema }}" itemprop="datePublished" class="f6 fw6 black-60">{{ post.date | date: "%b %-d, %Y" }}</time>
         <p itemprop="name headline" class="f2 mv0">
           <a href="{{ site.BASE_PATH }}{{ post.url }}" itemprop="url" class="link blue hover-dark-blue">{{ post.title }}</a>
         </p>
       </li>
+
       {% endfor %}
     </ul>
   </div>
