--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -6,13 +6,13 @@ layout: default
   <div class="container-fluid">
     <article class="row article" itemscope itemtype="http://schema.org/BlogPosting">
       <div class="col-xs-12 col-md-8">
-        <h5 class="f5 fw6 mt0 mb2">
-          <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
-            {{ page.date | date_to_long_string }}
+        <h5 class="mt0 mb2">
+          <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished" class="f6 fw6 black-60">
+            {{ page.date | date: "%b %-d, %Y" }}
           </time>
         </h5>
 
-        <h1 class="f2 mt0 mb4" itemprop="name headline">{{ page.title }}</h1>
+        <h1 class="f1 mt0 mb4" itemprop="name headline">{{ page.title }}</h1>
 
         <div class="lh-copy" itemprop="articleBody">
           {{ content }}
