--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="{{ site.locale }}">
   <head>
     {% include head.html %}
   </head>
@@ -10,7 +10,7 @@
 
     {% comment %} JS and analytics only {% endcomment %}
     {% comment %}
-    <script src="{{ site.base_url }}assets/js/main.min.js"></script>
+    <script src="{{ site.base_url }}/assets/js/main.min.js"></script>
     {% endcomment %}
   </body>
 </html>
