--- a/_includes/head-slides.html
+++ b/_includes/head-slides.html
@@ -9,7 +9,7 @@
 
 <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,700,700i%7CMaitree:200,300,400,600,700&amp;subset=latin-ext" rel="stylesheet">
 
-<link rel="stylesheet" type="text/css" media="all" href="{{ site.base_url }}assets/css/webslides.css">
+<link rel="stylesheet" type="text/css" media="all" href="{{ site.base_url }}/assets/css/webslides.css">
 
 {% comment %}
 <!-- Android -->
