--- a/_includes/head-slides.html
+++ b/_includes/head-slides.html
@@ -1,31 +1,15 @@
+{% seo %}
+{% feed_meta %}
+
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="{{ page.description }}">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 <meta name="author" content="{{ site.author }}">
-
-<title>
-  {{ page.title }} | {{ site.title }}
-</title>
-
+<meta name="theme-color" content="#357edd">
 <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,700,700i%7CMaitree:200,300,400,600,700&amp;subset=latin-ext" rel="stylesheet">
-
 <link rel="stylesheet" type="text/css" media="all" href="{{ site.base_url }}/assets/css/webslides.css">
 
-{% comment %}
-<!-- Android -->
-<meta name="mobile-web-app-capable" content="yes">
-<meta name="theme-color" content="#357edd">
-{% endcomment %}
+{% include font-face-observer.html %}
 
-{% comment %} Google Analytics {% endcomment %}
-{% if site.ga_tracking_id and site.ga_domain %}
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', '{{ site.ga_tracking_id }}', '{{ site.ga_domain }}');
-  ga('send', 'pageview');
-</script>
+{% if jekyll.environment == "production" %}
+  {% include analytics.html %}
 {% endif %}
