--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 <meta name="author" content="{{ site.author }}">
+<meta name="theme-color" content="#357edd">
 <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet">
 
 {% include font-face-observer.html %}
