--- a/_layouts/slides.html
+++ b/_layouts/slides.html
@@ -10,7 +10,7 @@
     </article>
   </main>
 
-  <script src="http://code.jquery.com/jquery-3.1.1.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
   <script src="{{ site.base_url }}/assets/js/webslides-lite.min.js"></script>
 </body>
 </html>
