--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
 <meta name="author" content="{{ site.author }}">
 <meta name="theme-color" content="#357edd">
 <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet">
+<link rel="icon" href="{{ site.baseurl }}/favicon.ico" type="image/x-icon">
 
 {% include font-face-observer.html %}
 
