--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,9 +1,9 @@
-<section class="bg-blue white pv6">
+<section class="primary pv3 pv5-m pv6-ns">
   <div class="container-fluid">
-    <div class="row center-xs middle-xs">
+    <div class="row">
       <hgroup class="col-xs-12 col-md-8">
-        <h1 class="tracked f1 fw6">NATHAN JESSEN</h1>
-        <h2 class="tracked f2 fw5">Front-end Architect</h2>
+        <h1 class="f2 f1-ns lh-solid fw6 mv3">Nathan Jessen</h1>
+        <h2 class="f3 f2-ns lh-solid fw5 mv3">Front-end Architect</h2>
       </hgroup>
     </div>
   </div>
