--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -12,7 +12,7 @@
       {% endif %}
         <time datetime="{{ post.date | date_to_xmlschema }}" itemprop="datePublished" class="f6 fw6 black-60">{{ post.date | date: "%b %-d, %Y" }}</time>
         <p itemprop="name headline" class="f2 mv0">
-          <a href="{{ post.url }}" itemprop="url" class="link blue hover-dark-blue">{{ post.title }}</a>
+          <a href="{{ post.url }}" itemprop="url" class="link primary hover-dark-primary">{{ post.title }}</a>
         </p>
       </li>
 
