--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 
-<section class="pv5">
+<section class="pv4">
   <div class="container-fluid">
-    <h2 class="f2 mt0">{{ page.title }}</h2>
+    <h2 class="f2 mt0 primary">{{ page.title }}</h2>
     {{ content }}
   </div>
 </section>
