--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-near-black white pt4 pb5" role="contentinfo">
+<footer class="bg-primary white pv5" role="contentinfo">
   <div class="container-fluid">
     <div class="row center-xs">
       <div class="col-xs-12">
