Update homepage copy

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,30 +1,29 @@
 <section class="tc pv5">
   <div class="container-fluid">
-    <h2 class="f2 primary">Services I Provide</h2>
+    <h2 class="f2">Services I Provide</h2>
 
     <div class="row services-wrapper">
       <div class="col-md-4 mb4 mb0-l">
-        <div class="service-icon primary">
-          <i class="icon-code"></i>
-        </div>
-        <h2 class="primary heading-underline">Responsive Web Development</h2>
+        <h2 class="heading-underline">Responsive Web Development</h2>
         <p class="lh-copy fw3">Using a strong understanding of HTML, CSS, browser compatibility, and accessibility, I develop websites using a mobile first strategy to ensure they look beautiful and perform flawlessly for everyone on all devices.</p>
       </div>
 
       <div class="col-md-4 mb4 mb0-l">
-        <div class="service-icon primary">
-          <i class="icon-laptop"></i>
-        </div>
-        <h2 class="primary heading-underline">Performance Optimization</h2>
+        <h2 class="heading-underline">Performance Optimization</h2>
         <p class="lh-copy fw3">Analyzing network utilization and page performance allows me to pinpoint bottlenecks in page load, performance, and jankiness. The findings of an analysis can be used as a roadmap to reduce bounce rates and drop-offs, improve user experience, and increase conversion rates.</p>
       </div>
 
       <div class="col-md-4 mb4 mb0-l">
-        <div class="service-icon primary">
-          <i class="icon-heart"></i>
-        </div>
-        <h2 class="primary heading-underline">Speaking</h2>
+        <h2 class="heading-underline">Speaking</h2>
         <p class="lh-copy fw3">Attending and speaking at developer groups and conferences allows us all to share our knowledge and master our craft. Given my passion for CSS, I attempt to use every opportunity to share my love for the language.</p>
+      </div>
+    </div>
+
+    <div class="row mt4">
+      <div class="col-xs-12">
+        <a href="{{ site.base_url }}services/" class="no-underline f6 f5-ns fw5 tc dib ba bw1 ph4 pv3">Learn more</a>
+        <span class="dib ph4 pv3">or</span>
+        <a href="{{ site.base_url }}contact/" class="no-underline f6 f5-ns fw5 tc dib ba bw1 ph4 pv3 white bg-">Hire me</a>
       </div>
     </div>
   </div>
