Update page layouts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     {% include head.html %}
   </head>
-  <body class="{{ page.slug }} sans-serif near-black">
+  <body class="{{ page.slug }} sans-serif black-90">
     {% include header.html %}
     {{ content }}
     {% include footer.html %}
