--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,9 +2,13 @@
 layout: default
 ---
 
-<section class="pv4">
+<section class="pv2 pv3-m pv4-ns">
   <div class="container-fluid">
-    <h2 class="f2 mt0 primary">{{ page.title }}</h2>
-    {{ content }}
+    <div class="row">
+      <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
+        <h2 class="f2 mt0">{{ page.title }}</h2>
+        {{ content }}
+      </div>
+    </div>
   </div>
 </section>
