--- a/_assets/css/partials/custom.css
+++ b/_assets/css/partials/custom.css
@@ -1,37 +1,14 @@
-/** Misc */
-
 :root {
-  --primary: #255582;
+  --primary: #2ecc71;
+  --secondary: #1369fa;
 }
 
 .primary {
   color: var(--primary);
 }
 
-.hover-dark-primary:hover {
-  color: darken(var(--primary), 10%);
-}
-
-.bg-primary {
-  background-color: var(--primary);
-}
-
-.hover-bg-primary:hover {
-  background-color: var(--primary);
-}
-
 .has-webfonts-loaded body {
   font-family: 'Raleway';
-}
-
-nav a.active::after {
-  background-image: linear-gradient(to right, #1de9b6, #2979ff);
-  bottom: 0;
-  content: '';
-  height: 4px;
-  left: 0;
-  position: absolute;
-  width: 100%;
 }
 
 .article a {
@@ -60,23 +37,14 @@ nav a.active::after {
 
   &::after {
     border: solid 2px var(--primary);
-    content: " ";
+    /* background-image: linear-gradient(to right, #1de9b6, #2979ff);
+    height: 4px; */
+    content: '';
     display: block;
-    margin: 10px auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
     width: 35px;
   }
-}
-
-.service-icon {
-  --icon-size: 40px;
-  display: block;
-  font-size: var(--icon-size);
-  line-height: 1;
-  margin: auto;
-  max-width: 100%;
-  position: relative;
-  text-align: center;
-  vertical-align: middle;
 }
 
 .sr-only {
@@ -90,37 +58,69 @@ nav a.active::after {
   border: 0;
 }
 
-.social-btn {
-  border-radius: 50%;
-  display: inline-block;
-  font-size: 1rem;
-  height: 40px;
-  line-height: 40px;
-  margin-bottom: .5rem;
-  text-align: center;
-  width: 40px;
+.sprint {
+  background-color: #ffce0a;
+  color: #373737;
 }
 
-.badge {
-  display: inline-block;
-  min-width: 10px;
-  padding: 3px 7px;
-  font-size: 12px;
-  font-weight: bold;
-  line-height: 1;
+.gatorade {
+  background-color: #1d1d1b;
+  color: #ff4e00;
+}
+
+.gcr {
   color: #fff;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: baseline;
-  background-color: #999;
-  border-radius: 10px;
-
-  &:empty {
-    display: none;
-  }
+  background-color: #dc291e;
 }
 
-.img-responsive {
-  max-width: 100%;
-  height: auto;
+.bivi {
+  color: #fff;
+  background-color: #233e6b;
+}
+
+.southwest {
+  background-color: #304cb2;
+  color: #fff;
+}
+
+.rosedale {
+  background-color: #007b5f;
+  color: #fff;
+}
+
+.ge {
+  background-color: #055fba;
+  color: #fff;
+}
+
+.heartland {
+  background-color: #2c3e50;
+  color: #fff;
+}
+
+.dark--toggle {
+  animation-duration: .2s;
+  animation-timing-function: ease-in-out;
+  animation-delay: .25s;
+  animation-fill-mode: forwards;
+  animation-name: buttonFadeIn;
+  background-color: var(--primary);
+  border-radius: 50%;
+  border-width: 0;
+  cursor: pointer;
+  height: 1.5rem;
+  opacity: 0;
+  transition: background-color .25s;
+  width: 1.5rem;
+}
+
+@keyframes buttonFadeIn {
+  0% {
+    opacity: 0;
+    transform: scale(.5);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
