--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,13 +2,6 @@
 layout: default
 ---
 
-<section class="pv2 pv3-m pv4-ns">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
-        <h2 class="f2 mt0">{{ page.title }}</h2>
-        {{ content }}
-      </div>
-    </div>
-  </div>
-</section>
+<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
+  {{ content }}
+</div>
