Update social links

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -11,8 +11,8 @@
       <p class="max-w-xl mt-5 mx-auto text-xl leading-7 text-gray-500">Front-end engineer with experience in fast static sites and modern web applications, currently focusing on React, Redux and Web3.</p>
       <div class="mt-5 max-w-md mx-auto sm:flex sm:justify-center md:mt-8">
         <div class="rounded-md shadow">
-          <a href="https://github.com/nathanjessen" target="_blank" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base leading-6 font-medium rounded-md text-white bg-green-600 hover:bg-green-500 focus:outline-none focus:border-green-700 focus:shadow-outline-green transition duration-150 ease-in-out md:py-4 md:text-lg md:px-10">
-            Visit GitHub
+          <a href="https://github.com/{{ site.github_username }}" target="_blank" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base leading-6 font-medium rounded-md text-white bg-green-600 hover:bg-green-500 focus:outline-none focus:border-green-700 focus:shadow-outline-green transition duration-150 ease-in-out md:py-4 md:text-lg md:px-10">
+            View GitHub
           </a>
         </div>
       </div>
