--- a/_includes/nav-social.html
+++ b/_includes/nav-social.html
@@ -1,39 +1,66 @@
-<nav class="flex flex-column items-end">
-  {% if site.githubs.username %}
-  <a href="https://github.com/{{ site.githubs.username }}" target="_blank" class="link primary i ttu mb2">
-    GitHub
+<nav class="flex justify-center md:order-2">
+  {% if site.github_username %}
+  <a href="https://github.com/{{ site.github_username }}" target="_blank" class="ml-6 text-gray-400 hover:text-gray-500">
+    <span class="sr-only">GitHub</span>
+    <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
+      <path fill-rule="evenodd" clip-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z" />
+    </svg>
   </a>
-  {% endif %}{% if site.codepen.username %}
-  <a href="http://codepen.io/{{ site.codepen.username }}" target="_blank" class="link primary i ttu mb2">
-    CodePen
+  {% endif %}
+  {% if site.twitter_username %}
+  <a href="https://twitter.com/{{ site.twitter_username }}" target="_blank" class="ml-6 text-gray-400 hover:text-gray-500">
+    <span class="sr-only">Twitter</span>
+    <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
+      <path fill-rule="evenodd" clip-rule="evenodd" d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"/>
+    </svg>
   </a>
-  {% endif %}{% if site.twitter.username %}
-  <a href="https://twitter.com/{{ site.twitter.username }}" target="_blank" class="link primary i ttu mb2">
-    Twitter
+  {% endif %}
+  {% if site.linkedin_username %}
+  <a href="https://www.linkedin.com/in/{{ site.linkedin_username }}/" target="_blank" class="ml-6 text-gray-400 hover:text-gray-500">
+    <span class="sr-only">LinkedIn</span>
+    <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
+      <path fill-rule="evenodd" clip-rule="evenodd" d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z"/>
+    </svg>
   </a>
-  {% endif %}{% if site.medium.username %}
-  <a href="https://medium.com/{{ site.medium.username }}" target="_blank" class="link primary i ttu mb2">
-    Medium
+  {% endif %}
+  {% if site.codepen_username %}
+  <a href="http://codepen.io/{{ site.codepen_username }}" target="_blank" class="ml-6 text-gray-400 hover:text-gray-500">
+    <span class="sr-only">CodePen</span>
+    <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
+      <path fill-rule="evenodd" clip-rule="evenodd" serif:id="shape 23" d="M12-.001l11 6v12l-11 6-11-6v-12l11-6z"/>
+    </svg>
   </a>
-  {% endif %}{% if site.linkedin.username %}
-  <a href="https://www.linkedin.com/in/{{ site.linkedin.username }}" target="_blank" class="link primary i ttu mb2">
-    LinkedIn
+  {% endif %}
+  {% if site.medium_username %}
+  <a href="https://medium.com/@{{ site.medium_username }}" target="_blank" class="ml-6 text-gray-400 hover:text-gray-500">
+    <span class="sr-only">Medium</span>
+    <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" fill-rule="evenodd" clip-rule="evenodd">
+      <path d="M2.846 6.887c.03-.295-.083-.586-.303-.784l-2.24-2.7v-.403h6.958l5.378 11.795 4.728-11.795h6.633v.403l-1.916 1.837c-.165.126-.247.333-.213.538v13.498c-.034.204.048.411.213.537l1.871 1.837v.403h-9.412v-.403l1.939-1.882c.19-.19.19-.246.19-.537v-10.91l-5.389 13.688h-.728l-6.275-13.688v9.174c-.052.385.076.774.347 1.052l2.521 3.058v.404h-7.148v-.404l2.521-3.058c.27-.279.39-.67.325-1.052v-10.608z"/>
+    </svg>
   </a>
-  {% endif %}{% if site.gplus.username %}
-  <a href="https://plus.google.com/+{{ site.gplus.username }}/posts" target="_blank" class="link primary i ttu mb2">
-    Google Plus
+  {% endif %}
+  {% if site.instagram_username %}
+  <a href="https://www.instagram.com/{{ site.instagram_username }}/" target="_blank" class="ml-6 text-gray-400 hover:text-gray-500">
+    <span class="sr-only">Instagram</span>
+    <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
+      <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
+    </svg>
   </a>
-  {% endif %}{% if site.instagram.username %}
-  <a href="https://www.instagram.com/{{ site.instagram.username }}/" target="_blank" class="link primary i ttu mb2">
-    Instagram
+  {% endif %}
+  {% if site.dribbble_username %}
+  <a href="https://dribbble.com/{{ site.dribbble_username }}" target="_blank" class="ml-6 text-gray-400 hover:text-gray-500">
+    <span class="sr-only">Dribbble</span>
+    <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
+      <path fill-rule="evenodd" clip-rule="evenodd" d="M12 0c-6.628 0-12 5.373-12 12s5.372 12 12 12 12-5.373 12-12-5.372-12-12-12zm9.885 11.441c-2.575-.422-4.943-.445-7.103-.073-.244-.563-.497-1.125-.767-1.68 2.31-1 4.165-2.358 5.548-4.082 1.35 1.594 2.197 3.619 2.322 5.835zm-3.842-7.282c-1.205 1.554-2.868 2.783-4.986 3.68-1.016-1.861-2.178-3.676-3.488-5.438.779-.197 1.591-.314 2.431-.314 2.275 0 4.368.779 6.043 2.072zm-10.516-.993c1.331 1.742 2.511 3.538 3.537 5.381-2.43.715-5.331 1.082-8.684 1.105.692-2.835 2.601-5.193 5.147-6.486zm-5.44 8.834l.013-.256c3.849-.005 7.169-.448 9.95-1.322.233.475.456.952.67 1.432-3.38 1.057-6.165 3.222-8.337 6.48-1.432-1.719-2.296-3.927-2.296-6.334zm3.829 7.81c1.969-3.088 4.482-5.098 7.598-6.027.928 2.42 1.609 4.91 2.043 7.46-3.349 1.291-6.953.666-9.641-1.433zm11.586.43c-.438-2.353-1.08-4.653-1.92-6.897 1.876-.265 3.94-.196 6.199.196-.437 2.786-2.028 5.192-4.279 6.701z"/>
+    </svg>
   </a>
-  {% endif %}{% if site.dribbble.username %}
-  <a href="https://dribbble.com/{{ site.dribbble.username }}" target="_blank" class="link primary i ttu mb2">
-    Dribbble
-  </a>
-  {% endif %}{% if site.angellist.username %}
-  <a href="https://angel.co/{{ site.angellist.username }}" target="_blank" class="link primary i ttu mb2">
-    AngelList
+  {% endif %}
+  {% if site.angellist_username %}
+  <a href="https://angel.co/{{ site.angellist_username }}" target="_blank" class="ml-6 text-gray-400 hover:text-gray-500">
+    <span class="sr-only">AngelList</span>
+    <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
+      <path fill-rule="evenodd" clip-rule="evenodd" d="M6 12c0 1.657-1.343 3-3 3s-3-1.343-3-3 1.343-3 3-3 3 1.343 3 3zm9 0c0 1.657-1.343 3-3 3s-3-1.343-3-3 1.343-3 3-3 3 1.343 3 3zm9 0c0 1.657-1.343 3-3 3s-3-1.343-3-3 1.343-3 3-3 3 1.343 3 3z"/>
+    </svg>
   </a>
   {% endif %}
 </nav>
