--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -1,56 +1,43 @@
-<div class="py-12 bg-white">
-    <div class="max-w-xl mx-auto px-4 sm:px-6 lg:max-w-screen-xl lg:px-8">
-      <div class="lg:grid lg:grid-cols-3 lg:gap-8">
-        <div>
-          <div class="flex items-center justify-center rounded-md bg-gray-100 text-white p-2">
-            <img src="assets/images/tokenlist.png" alt="Tokenlist" class="h-64 w-100" />
-          </div>
-          <div class="mt-5">
-            <h5 class="text-lg leading-6 font-medium text-gray-900">Uniswap Tokenlist</h5>
-            <p class="mt-2 text-base leading-6 text-gray-500">
-                An initiative to improve discoverability, reputation and trust in ERC20 token lists in a manner that is inclusive, transparent, and decentralized.
-            </p>
-            <p class="mt-2 text-base leading-6 text-green-600">
-                <a href="https://github.com/nathanjessen/tokenlist" target="_blank">View Source Code</a>
-            </p>
-          </div>
+<div class="py-12">
+  <div class="max-w-xl lg:max-w-screen-xl mx-auto px-4 sm:px-6 lg:px-8">
+    <ul class="grid grid-cols-1 gap-6 sm:grid-cols-2 md:grid-cols-3">
+      {% for featured in site.data.featured %}
+      <li class="col-span-1 flex flex-col text-center bg-white rounded-lg shadow border border-gray-300">
+        <div class="flex items-center justify-center bg-gray-100 bg-cover bg-center rounded-t-md h-40"
+          style="background-image: url('{{ featured.img | relative_url }}');"
+        >
+          <img src="{{ featured.img | relative_url }}" alt="{{ featured.title }}" class="h-40 w-100 hidden" />
         </div>
-        <div>
-          <div class="flex items-center justify-center rounded-md bg-gray-100 text-white p-2">
-            <div class="h-64 flex items-center">
+        <div class="border-t border-gray-200 flex-1 p-8">
+          <h5 class="text-lg leading-6 font-medium text-gray-900">
+            {{ featured.title }}
+          </h5>
+          <p class="mt-2 text-base leading-6 text-gray-600">
+            {{ featured.desc }}
+          </p>
+        </div>
+        <div class="border-t border-gray-200">
+          <div class="-mt-px flex">
+            <div class="w-0 flex-1 flex border-r border-gray-200">
+              <a href="{{ featured.url | absolute_url }}" target="_blank" class="relative -mr-px w-0 flex-1 inline-flex items-center justify-center py-4 text-sm leading-5 text-gray-700 font-medium border border-transparent rounded-bl-lg hover:text-gray-500 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 focus:z-10 transition ease-in-out duration-150">
+                <svg class="w-5 h-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM4.332 8.027a6.012 6.012 0 011.912-2.706C6.512 5.73 6.974 6 7.5 6A1.5 1.5 0 019 7.5V8a2 2 0 004 0 2 2 0 011.523-1.943A5.977 5.977 0 0116 10c0 .34-.028.675-.083 1H15a2 2 0 00-2 2v2.197A5.973 5.973 0 0110 16v-2a2 2 0 00-2-2 2 2 0 01-2-2 2 2 0 00-1.668-1.973z" clip-rule="evenodd" />
+                </svg>
+                <span class="ml-3">Website</span>
+              </a>
+            </div>
+            <div class="-ml-px w-0 flex-1 flex">
+              <a href="{{ featured.source | absolute_url }}" target="_blank" class="relative w-0 flex-1 inline-flex items-center justify-center py-4 text-sm leading-5 text-gray-700 font-medium border border-transparent rounded-br-lg hover:text-gray-500 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 focus:z-10 transition ease-in-out duration-150">
+                <svg class="w-5 h-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M12.316 3.051a1 1 0 01.633 1.265l-4 12a1 1 0 11-1.898-.632l4-12a1 1 0 011.265-.633zM5.707 6.293a1 1 0 010 1.414L3.414 10l2.293 2.293a1 1 0 11-1.414 1.414l-3-3a1 1 0 010-1.414l3-3a1 1 0 011.414 0zm8.586 0a1 1 0 011.414 0l3 3a1 1 0 010 1.414l-3 3a1 1 0 11-1.414-1.414L16.586 10l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
+                </svg>
+                <span class="ml-3">Source Code</span>
+              </a>
             </div>
           </div>
-          <div class="mt-5">
-            <h5 class="text-lg leading-6 font-medium text-gray-900">Tokenlist Viewer with Uniswap Integration</h5>
-            <p class="mt-2 text-base leading-6 text-orange-400">
-                In Progress
-            </p>
-            <!-- <p class="mt-2 text-base leading-6 text-green-600">
-                <a href="https://github.com/TrustSwap-fun/launchpad" target="_blank">See on GitHub</a>
-            </p> -->
-          </div>
         </div>
-        <div>
-          <div class="flex items-center justify-center rounded-md bg-gray-100 text-white p-2">
-            <div class="h-64 flex items-center">
-              <img src="assets/images/opensea.png" alt="UniSwap Tokenlist" class="h-32" />
-            </div>
-          </div>
-          <div class="mt-5">
-            <h5 class="text-lg leading-6 font-medium text-gray-900">OpenSea Market</h5>
-            <p class="mt-2 text-base leading-6 text-orange-400">
-                On Deck
-            </p>
-            <!-- <p class="mt-2 text-base leading-6 text-green-600">
-                <a href="https://github.com/TrustSwap-fun/launchpad" target="_blank">See on GitHub</a>
-            </p> -->
-          </div>
-        </div>
-        <!-- <div class="mt-10 lg:mt-0 relative">
-            <div class="absolute inset-0 flex items-center justify-center text-center rounded-md border-gray-900 border-2 border-dashed opacity-25">
-                Coming Soon
-            </div>
-        </div> -->
-      </div>
-    </div>
+      </li>
+      {% endfor %}
+    </ul>
   </div>
+</div>
