--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,17 +1,19 @@
-<div class="bg-white">
+<div class="bg-gradient-to-r from-green-700 via-green-600 to-green-500 border-t-2 border-b-2 border-green-600 shadow-inner">
   <div class="max-w-screen-xl mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:px-8">
     <div class="text-center">
-      <h2 class="mt-1 text-4xl leading-10 font-extrabold text-gray-900 sm:text-5xl sm:leading-none sm:tracking-tight lg:text-6xl">
-        Nathan
-        <br class="xl:hidden">
-        <span class="text-green-600">Jessen</span>
-      </h2>
-      <!-- <h1 class="text-base leading-6 font-semibold text-indigo-600 tracking-wide uppercase">Pricing</h1> -->
-      <!-- <p class="mt-1 text-4xl leading-10 font-extrabold text-gray-900 sm:text-5xl sm:leading-none sm:tracking-tight lg:text-6xl">Take control of your team.</p> -->
-      <p class="max-w-xl mt-5 mx-auto text-xl leading-7 text-gray-500">Front-end engineer with experience in fast static sites and modern web applications, currently focusing on React, Redux and Web3.</p>
+      <div style="text-shadow: 0 1px #111;">
+        <h2 class="mt-1 text-4xl leading-10 font-extrabold text-white sm:text-5xl sm:leading-none sm:tracking-tight lg:text-6xl">
+          Nathan
+          <br class="xl:hidden">
+          <span class="text-green-900">Jessen</span>
+        </h2>
+        <p class="max-w-2xl mt-10 mx-auto text-2xl leading-7 font-medium text-white">
+          Front-end engineer building fast static sites and modern web applications with React, Redux, and Web3.
+        </p>
+      </div>
       <div class="mt-5 max-w-md mx-auto sm:flex sm:justify-center md:mt-8">
-        <div class="rounded-md shadow">
-          <a href="https://github.com/{{ site.github_username }}" target="_blank" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base leading-6 font-medium rounded-md text-white bg-green-600 hover:bg-green-500 focus:outline-none focus:border-green-700 focus:shadow-outline-green transition duration-150 ease-in-out md:py-4 md:text-lg md:px-10">
+        <div class="rounded-md shadow-md">
+          <a href="https://github.com/{{ site.github_username }}" target="_blank" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base leading-6 font-medium rounded-md text-green-600 bg-white hover:bg-gray-200 focus:outline-none focus:border-white focus:shadow-outline-white transition duration-150 ease-in-out md:py-4 md:text-lg md:px-10">
             View GitHub
           </a>
         </div>
