Update section spacing

--- a/_includes/testimonial.html
+++ b/_includes/testimonial.html
@@ -1,4 +1,4 @@
-<section class="py-12 bg-gray-50 overflow-hidden md:py-20 lg:py-24">
+<section class="py-12 bg-gray-50 overflow-hidden md:py-16 lg:py-20">
   <div class="relative max-w-screen-xl mx-auto px-4 sm:px-6 lg:px-8">
     <svg class="absolute top-full right-full transform translate-x-1/3 -translate-y-1/4 lg:translate-x-1/2 xl:-translate-y-1/2" width="404" height="404" fill="none" viewBox="0 0 404 404" role="img" aria-labelledby="svg-pattern">
       <title id="svg-pattern">Pattern</title>
@@ -11,7 +11,7 @@
     </svg>
 
     <div class="relative">
-      <blockquote class="mt-8">
+      <blockquote>
         <div class="max-w-4xl mx-auto text-center text-2xl leading-9 font-medium text-gray-900">
           <p>
             &ldquo;Nathan is one of the best developers I have ever worked with. He can handle any task you throw at him, and he is way above the curve when it comes to implementing UI. Great to work with and doesn’t shy away from any challenge. I miss having the opportunity to work with him, and look forward to stealing him away from someone else in the future!&rdquo;
